crates/eml_cli/tests/snapshots/integration__ui__run_fail@basics__division_by_zero.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- runtime error ---\\n{error}\\n\")"
input_file: tests/ui/run-fail/basics/division_by_zero.em
---
--- stdout ---
--- runtime error ---
division by zero
  at run-fail/basics/division_by_zero.em:3:16
